# exo-gen

./: .agent_skills.md  .env.example  .gitattributes  .gitignore  ADMIN_REQUIREMENTS.md  AI_CONTEXT.md  CONTEXT.md  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  RULES.md  alembic.ini  body.json  body_shop.json  check_expeditions.py  docker-compose.yaml  docker-compose.yml  fix_stuck_expeditions.py  main.py  pyproject.toml  spec.md
about_project/: crud.md  layers_v1.txt  project.md
alembic/: env.py
alembic/versions/: 04a2b630cec5_add_guide_tables_seasons_chapters_.py  13894f0049a2_fix_shiporm.py  240af1aee6cc_add_zones_and_expeditions_tables.py  277454c7e69f_initial_players_and_ships_tables.py  29deb3eb8ab6_merge_heads.py  78140186e4f2_add_player_balances.py  7b5c8d9e0f1a_change_telegram_id_to_bigint.py  8d0a3e2c6cc1_fix_names_guide_progress_tables.py  a1b2c3d4e5f6_add_shop_items_and_purchase_history.py  a2cdb27bb74f_add_zones_and_expeditions.py  a3b4c5d6e7f8_add_deleted_at_to_players.py  aeb8707a0717_add_equipment_table_for_ship_artifacts.py  c1d2e3f4a5b6_add_image_url_to_items.py  (+11 more)
api/: main.py
blockchain/: ton_client.py
config/: artifact_erosion.json  artifacts.json  avatars.json  essence_drop.json  essences.json  expeditions.json  fuels.json  galaxy_zones.json  lab_rules.json  marketplace.json  nft_minting.json  notifications.json  overdrive.json  promotion_quests.json  ranks.json  repair_costs.json  repair_mats.json  seasons.json  ships.json  shop_boxes.json
contracts/: ArtifactNFT.tact  FleetNFT.tact  XGENJetton.tact
core/: config.py  config_loader.py  config_models.py  database.py  models.py  redis.py
frontend/: .env.example  docker-compose.yaml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
graphify-out/: .graphify_labels.json  .graphify_root  .graphify_show_analysis.py  GRAPH_REPORT.md  graph.html  graph.json
locales/: common.json
scripts/: clear_config_cache.py  debug_inventory.py  seed_dev_data.py  validate_configs.py
tests/: conftest.py
workers/: celery_app.py  expedition_worker.py
(+320 files in other folders)
