[project]
name = "hitchhiker-idle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.137.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
